# rl-ducts

./: .gitignore  README.md  pyproject.toml
plantroom_rl/notebooks/: 1_grid_maze.ipynb  2maze_grid_stable_baselines_ppo.ipynb  old_1_grid_maze_another_folder.ipynb
rl-baselines3-zoo/hyperparams/: ppo.yml
rl-baselines3-zoo/rl_zoo3/: enjoy.py  train.py
rl-starter-files/: model.py
rl-starter-files/scripts/: train.py
ventilation-env/: pyproject.toml
ventilation-env/ventilation_env/: __init__.py  ventilation.py
